Update main to add announce

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -3,3 +3,7 @@
 {% block outdated %}
 Document versions starting from 3.6.0 contain Community Edition features only. For Enterprise features and documentation, please contact us.
 {% endblock %}
+
+{% block announce %}
+Document versions starting from 3.6.0 contain Community Edition features only. For Enterprise documentation, please contact us.
+{% endblock %}
