--- a/docs-2.0-zh/overrides/404.html
+++ b/docs-2.0-zh/overrides/404.html
@@ -1,15 +1,13 @@
   
-{#-
-  This file was automatically generated - do not edit
--#}
+
 {% extends "main.html" %}
 {% block content %}
-  <h2>Sorry, the page is invalid...</h2>
-
-  <p>Click the edit button in the upper right corner of the <a href="javascript:history.back(-1)">original document</a> to fix the invalid link and become a contributor.</p>
-  <p>You can also:</p>
-  <p><a href="https://github.com/vesoft-inc/nebula-docs-cn/issues/new">Submit an issue</a> about the invalid link.</p>
-  <p>Return to <a href="javascript:history.back(-1)">the previous page</a>.</p>
-  <p>Return to <a href="/">the home page</a>.</p>
+  <h2>对不起，页面失效了……</h2>
+  
+  <p>欢迎点击<a href="javascript:history.back(-1)">原文档</a>右上角的编辑按钮修复失效链接，并成为contributor</p>
+  <p>你还可以：</p>
+  <p><a href="https://github.com/vesoft-inc/nebula-docs/issues/new/choose">提交issue反馈链接问题</a></p>
+  <p><a href="javascript:history.back(-1)">返回上一页</a></p>
+  <p><a href="/">返回文档首页</a></p>
 {% endblock %}
 {% block disqus %}{% endblock %}
