--- a/404.html
+++ b/404.html
@@ -6,14 +6,14 @@
         setTimeout(function(){
             var path = window.location.pathname;
             var pathFragments = path.split('/');
-            // remove all fragments after the first (the nonexistent page and any subdirectories)
+            // 删除版本号之后的所有内容
             pathFragments = pathFragments.slice(0, 2);
-            // add '404.html' to the end
+            // 在末尾添加 404.html
             pathFragments.push('404.html');
-            // join the fragments back together
+            // 重新拼接起来，用斜杠分隔
             var newPath = pathFragments.join('/');
             window.location = newPath;
-        }, 500);
+        }, 500);  //跳转前停留时间
     </script>
 </head>
 <body>
