--- a/404.html
+++ b/404.html
@@ -16,6 +16,7 @@
         }, 500);  //跳转前停留时间
     </script>
 </head>
+<!-- 如果用户客户端禁用JavaScript，无法自动跳转，提示用户手动点击下面的链接。-->
 <body>
     If you are not redirected automatically, follow this <a id="redirect-link" href='#'>link</a>.
     <script>
