--- a/docs-2.0-zh/overrides/main.html
+++ b/docs-2.0-zh/overrides/main.html
@@ -4,5 +4,5 @@ https://github.com/mkdocs/mkdocs/blob/master/mkdocs/themes/mkdocs/main.html -->
 {% extends "base.html" %}
 
 {% block announce %}
-  从3.5.0版本开始的文档仅包含社区版功能。如需查看企业版文档，欢迎<a href="https://yueshu.com.cn/contact">联系我们</a>。
+  从3.5.0版本开始的文档仅包含社区版功能。如需查看企业版文档，欢迎<a href="https://www.nebula-graph.com.cn/contact">联系我们</a>。
 {% endblock %}
