--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
             pathFragments.push('404.html');
             // 重新拼接起来，用斜杠分隔
             var newPath = pathFragments.join('/');
-            window.location = newPath;
+             window.location.replace(newPath);  // 使用 replace 方法替换当前历史堆栈条目
         }, 500);  //跳转前停留时间
     </script>
 </head>
