change to outdated for EN

--- a/docs-2.0-en/overrides/main.html
+++ b/docs-2.0-en/overrides/main.html
@@ -2,6 +2,6 @@
 https://github.com/mkdocs/mkdocs/blob/master/mkdocs/themes/mkdocs/main.html -->
 {% extends "base.html" %}
 
-{% block announce %}
+{% block outdated %}
 Document versions starting from 3.6.0 contain Community Edition features only. For Enterprise documentation, please <a href="https://www.nebula-graph.io/contact">contact us</a>.
 {% endblock %}
